refactor: hapus kolom keterangan pada kelompok rentan usia
